--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "liveServer.settings.port": 5515
+    "liveServer.settings.port": 5516,
+    "cSpell.words": [
+        "unsubscription"
+    ]
 }
